# intel-npu-llm-poc

./: .gitignore  README.md  pyproject.toml  run_tests.py
examples/: story.txt  summarize.py
src/: engine.py  main.py
tests/: hardware_test.py  test_engine.py  test_main.py
