[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "npu-test"
version = "0.1.0"
description = "NPU inference test with Intel XPU and IPEX-LLM"
readme = "README.md"
requires-python = ">=3.10,<3.12"

dependencies = [
    # Core ML libraries
    "ipex-llm[npu]",
    "openvino"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "black",
    "flake8",
    "mypy",
]

[tool.uv]
index-strategy = "unsafe-best-match"
no-build-isolation = true
prerelease = "allow"

[tool.black]
line-length = 88
target-version = ['py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true